# zerostack

./: .Cargo.toml.swp  .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONFIG.md  Cargo.toml  LICENSE  README.md  default.nix  dirs_asked_architecture.txt  flake.nix  justfile  release.nix
.github/workflows/: ci.yml  release.yml
data/: models.json  session_export.html
docs/: COMMANDS.md  CONFIG.md  MEMORY.md  PROVIDERS.md  WORKFLOWS.md  index.html
nix/overlay/: default.nix  development.nix
packaging/conda/zerostack/: meta.yaml
prompts/: ask.md  autoconfig.md  brainstorm.md  code.md  concise.md  debug.md  default.md  frontend-design.md  plan.md  refactor.md  review-security.md  review.md  simplify.md  write-prompt.md
scripts/: setup-neovim.sh  sync-version.sh
src/: auth.rs  cli.rs  docs.rs  event.rs  logging.rs  main.rs  models_catalog.rs  print.rs  provider.rs  retry.rs  sandbox.rs  startup.rs
src/agent/: builder.rs  compress.rs  mod.rs  prompt.rs  runner.rs  tools.rs
src/agent/tools/: ask.rs  bash.rs  edit.rs  find_files.rs  grep.rs  list_dir.rs  mod.rs  read.rs  todo.rs  write.rs
src/config/: load.rs  mod.rs  types.rs
src/context/: mod.rs  prompts.rs
src/extras/: export.rs  mod.rs  status_signals.rs
src/extras/acp/: mod.rs
src/extras/adviser/: builder.rs  mod.rs  prompt.rs  tool.rs
src/extras/advisor/: builder.rs  mod.rs  (+8 more)
src/permission/: ask.rs  checker.rs  mod.rs  pattern.rs
src/provider/: copilot.rs
src/session/: export.rs  mod.rs  storage.rs
src/setup/: mod.rs
src/tests/: adviser_tests.rs  advisor_tests.rs  auth_tests.rs  bash_tests.rs  checker_tests.rs  config_tests.rs  edit_tests.rs  fake_model.rs  headless_ask_tests.rs  input_tests.rs  list_dir_tests.rs  logging_tests.rs  loop_tests.rs  memory_tests.rs  mod.rs  paste_burst_tests.rs  picker_tests.rs  provider_tests.rs  renderer_tests.rs  resumed_history_tests.rs  session_export_tests.rs  session_storage_tests.rs  session_tests.rs  startup_prompt_mode_tests.rs  statusline_tests.rs  todo_tests.rs  tools_filter_tests.rs  workflows_tests.rs
src/ui/: app.rs  event_handler.rs  events.rs  input.rs  interactive.rs  markdown.rs  mod.rs  permission_handler.rs  picker.rs  renderer.rs  slash.rs  state.rs  status.rs  statusline.rs  terminal.rs  utils.rs
(+76 files in other folders)
